Cap nhat code moi nhat

--- a/index.html
+++ b/index.html
@@ -118,22 +118,22 @@
 			<div class="row message">
 				<div class="col-md-12">
 				
-				<p>Tuổi 19 đã qua...</p>
-				<p>Tuổi 20 đã tới, sẽ có những thử thách mới , </p>
+				<p>Whatssup lil sister</p>
+				<p>Tuổi mới sẽ có nhiều thử thách mới, nhiều khó khăn mới , </p>
 				<p>Nhưng mà </p>
 				<p>Hãy luôn cố gắng hết mình </p>
 				<p>Sống cuộc đời tuổi 20 không hối tiếc :d  </p>
 				<p><strong>Tuy nhiên</strong></p>
 				<p>Nếu đôi lúc em thấy buồn chán hay gì đó </p>
-				<p>Đừng ngần ngại nói cho bọn anh ( hoặc anh An )</p>
-				<p>We got your back :Đ </p>
+				<p>Don't be shy to tell me </p>
+				<p>I got your back as your brother :Đ </p>
 				<p>Nên là  </p>
 				<p>Cứ thoải mái em nhé</p>
 				<p>At the end </p>
-				<p>Tuổi 20 thật bùng nổ em nhé</p>
+				<p>Tuổi 16 thật bùng nổ em nhé</p>
 				<p>Cười nhiều lên, cởi mở lên </p>
 				<p>Nhớ rằng sức khỏe sẽ là quan trọng nhất</p>
-				<p>Nên hãy giữ gìn sức khỏe em nhé</p>
+				<p>Nên hãy giảm cân cũng như giữ gìn sức khỏe em nhé</p>
 				<p>Be strong girl </p>
 				<p>Happy birthday !!!</p>
 
@@ -147,7 +147,7 @@
 					<button class="btn btn-primary" id="play">Play Music</button>
 					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
 					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">From the most handsome member</button>
+					<button class="btn btn-primary" id="cake_fadein">From the brother</button>
 <button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A message for you</button>
